--- a/style.css
+++ b/style.css
@@ -1,1 +1,104 @@
+#hero {
+    position: absolute;
+    width: 1920px;
+    height: 1280px;
+    left: 0px;
+    top: 0px;
+    background: url('images/sean-pollock-203658-unsplash.jpg');
+}
+
+#hero-bg-mask {
+    position: absolute;
+    width: 1920px;
+    height: 768px;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(180deg, rgba(0, 78, 134, 0.8) 0%, rgba(10, 65, 104, 0.8) 100%);
+}
+
+.Lines {
+    position: absolute;
+    width: 1420px;
+    height: 688px;
+    left: 250px;
+    top: 80px;
+}
+
+#hero-bg-lines1 {
+    position: absolute;
+    width: 688px;
+    height: 0px;
+    left: -345px;
+    top: 80px;
+    opacity: 0.1;
+    border: 1px solid #FFFFFF;
+    transform: rotate(90deg);
+}
+
+#hero-bg-lines2 {
+    position: absolute;
+    width: 688px;
+    height: 0px;
+    left: 135px;
+    top: 80px;
+    opacity: 0.1;
+    border: 1px solid #FFFFFF;
+    transform: rotate(90deg);
+}
+
+#hero-bg-lines3 {
+    position: absolute;
+    width: 688px;
+    height: 0px;
+    left: 615px;
+    top: 80px;
+    opacity: 0.1;
+    border: 1px solid #FFFFFF;
+    transform: rotate(90deg);
+}
+
+#hero-bg-lines4 {
+    position: absolute;
+    width: 688px;
+    height: 0px;
+    left: 1075px;
+    top: 80px;
+    opacity: 0.1;
+    border: 1px solid #FFFFFF;
+    transform: rotate(90deg);
+}
+
+#hero-nav {
+    position: absolute;
+    width: 1920px;
+    height: 80px;
+    left: 0px;
+    top: 0px;
+}
+
+#hero-nav-burger {
+    position: absolute;
+    width: 40px;
+    height: 22px;
+    left: 250px;
+    top: 29px;
+    opacity: 0.8;
+}
+
+#Group {
+    position: absolute;
+    width: 40px;
+    height: 2px;
+    left: 250px;
+    top: 39px;
+}
+
+#Rectangle {
+    position: absolute;
+    width: 16px;
+    height: 2px;
+    left: 274px;
+    top: 39px;
+    background: #FEE040;
+}
 
